--- a/rules.html
+++ b/rules.html
@@ -138,7 +138,7 @@
     <li type="none">
       <h2 style="color:#c71239;">OSS Track</h2>
     </li>
-    <li>Being really passionate about  Free/Open-Source Software, we have a separate track track
+    <li>Being really passionate about  Free/Open-Source Software, we have a separate track
       aimed at improving the same. The OSS Track Prize will be awarded to the best project that fills
       an existing gap in any Open-Source ecosystem. You will have to explain the gap and your solution 
       in your demo. Feel free to ask away on Discord if you need any clarifications.
