improved oss-track link

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                   Open Source Track Winner
                 </h4>
                 <h3  class="prize-amt">INR 10,000</h3>
-                <a href="rules.html#oss-track"><h4>More details about the track here</h4></a>
+                <h4 style="color:#c71239">More details about the track <a href="rules.html#oss-track" style="text-decoration:underline;">here</a></h4>
               </div>
             </div>
             <!-- contact -->
