--- a/index.html
+++ b/index.html
@@ -478,102 +478,126 @@
           <!-- section title -->
           <div class="section-title section-title-prize">
             <h3 class="title"><span>Prizes</span></h3>
-            <div class="text-center" style="margin-top: 30px">
+            <!-- <div class="text-center" style="margin-top: 30px">
               <h2>Prizes over  <span style="color: #c71239">INR 1,00,000</span> and more</h2>
               <h2>Special Prizes for mini event winners 🎁</h2>
               <h3 style="margin-top: 30px;">Detailed Prize break-up TBA soon ⌛</h3>
-            </div>
+            </div> -->
           </div>
           <!-- /section title -->
 
           <!-- contact -->
 
-          <!-- <div class="col-sm-4">
+          <div class="col-sm-4" id="runner-up">
             <div class="contact">
               <div
-                class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden"
+                class="speaker-img prize-img"
+                style="margin-bottom: 15px; height: 150px; overflow: hidden;"
               >
                 <img
-                  style="border-radius: 50%; transform: scale(1.1)"
-                  src="img/second.png"
+                  src="img/second_2.png"
                   alt=""
                 />
               </div>
-              <h3>Rs 20,000</h3>
-              <h4 style="margin-top: -10px">2nd Prize</h4>
-            </div>
-          </div> -->
-          <!-- contact -->
-
-          <!-- <div class="col-sm-4">
-            <div class="contact">
-              <div
-                class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden"
-              >
-                <img
-                  style="border-radius: 50%; transform: scale(1.2)"
-                  src="img/first.png"
-                  alt=""
-                />
-              </div>
-              <h3>Rs 30,000</h3>
-              <h4 style="margin-top: -10px">1st Prize</h4>
-            </div>
-          </div> -->
-          <!-- contact -->
-
-          <!-- <div class="col-sm-4">
-            <div class="contact">
-              <div
-                class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden"
-              >
-                <img style="border-radius: 50%" src="img/third.png" alt="" />
-              </div>
-              <h3>Rs 10,000</h3>
-              <h4 style="margin-top: -10px">3rd Prize</h4>
+              <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Runners-Up</h4>
+              <h3 class="prize-amt">INR 25,000</h3>
+              <h3  class="prize-amt">+</h3>
+              <h3  class="prize-amt">DigitalOcean Credits worth $400</h3>
             </div>
           </div>
-        </div> -->
-        <!-- <div class="row">
+          <!-- contact -->
+
+          <div class="col-sm-4" id="winner">
+            <div class="contact">
+              <div
+                class="speaker-img"
+                style="margin-bottom: 15px; height: 200px; overflow: hidden"
+              >
+                <img
+                  src="img/first_1.png"
+                  alt=""
+                />
+              </div>
+              <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Winner</h4>
+              <h3  class="prize-amt">INR 35,000</h3>
+              <h3  class="prize-amt">+</h3>
+              <h3  class="prize-amt">DigitalOcean Credits worth $400</h3>
+            </div>
+          </div>
+          <!-- contact -->
+
+          <div class="col-sm-4">
+            <div class="contact">
+              <div
+                class="speaker-img prize-img"
+                style="margin-bottom: 15px; height: 150px; overflow: hidden;"
+              >
+                <img 
+                  src="img/third_3.png" 
+                  alt="" />
+              </div>
+              <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Second Runners-Up</h4>
+              <h3 class="prize-amt">INR 15,000</h3>
+              <h3 class="prize-amt">+</h3>
+              <h3 class="prize-amt">DigitalOcean Credits worth $400</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row" style="margin-top: 4%;">
           <div id="demo" class="collapse">
-            <div class="col-sm-2"> -->
-              <!--for begining-->
+            <div class="col-sm-12">
+              <!-- <div class="col-sm-1">
+                for begining
+              </div> -->
             <!-- </div> -->
             <!-- contact -->
-            <!-- <div class="col-sm-4">
-              <div class="contact">
+            <div class="col-sm-4">
+              <div class="contact" id="jiit-only">
                 <div
-                  class="speaker-img"
-                  style="margin-bottom: 15px; height: 150px; overflow: hidden"
+                  class="speaker-img jiit-only-img"
+                  style="margin-bottom: 15px; height: 94px; overflow: hidden;"
                 >
                   <img style="border-radius: 50%" src="img/cup.png" alt="" />
                 </div>
-                <h3>Rs 5,000</h3>
-                <h4 style="margin-top: -10px">
-                  Consolation Prize<br />
-                  (Best JIIT-Only Team)
-                </h4>
-              </div>
-            </div> -->
-            <!-- contact -->
-            <!-- <div class="col-sm-4">
-              <div class="contact">
-                <div
-                  class="speaker-img"
-                  style="margin-bottom: 15px; height: 150px; overflow: hidden"
-                >
-                  <img style="border-radius: 50%" src="img/cup.png" alt="" />
-                </div>
-                <h3>Rs 5,000</h3>
-                <h4 style="margin-top: -10px">
-                  Consolation Prize <br />(Best Girls-Only Team)
-                </h4>
+                <h4 style="margin-top: -10px"  class="prize-no">
+                  Best JIIT-Only Team
+                </h4> 
+                <h3  class="prize-amt">INR 5,000</h3>
               </div>
             </div>
-            <div class="col-sm-2"></div>
+            <!-- contact -->
+            <div class="col-sm-4">
+              <div class="contact">
+                <div
+                  class="speaker-img oss-track"
+                  style="margin-bottom: 15px; height: 150px; overflow: hidden"
+                >
+                  <img style="border-radius: 50%" src="img/cup.png" alt="" />
+                </div>
+                <h4 style="margin-top: -10px"  class="prize-no">
+                  Open Source Track Winner
+                </h4>
+                <h3  class="prize-amt">INR 10,000</h3>
+                <h4 style="color:#c71239">More details about the track <a href="rules.html#oss-track" style="text-decoration:underline;">here</a></h4>
+              </div>
+            </div>
+            <!-- contact -->
+            <div class="col-sm-4">
+              <div class="contact"  id="girls-only">
+                <div
+                  class="speaker-img jiit-only-img"
+                  style="margin-bottom: 15px; height: 94px; overflow: hidden;"
+                >
+                  <img style="border-radius: 50%" src="img/cup.png" alt="" />
+                </div>
+                <h4 style="margin-top: -10px"  class="prize-no">
+                  Best JIIT Girls-Only Team<br>
+                </h4>
+                <div style="color:white;"></div>
+                <h3 class="prize-amt">INR 5,000</h3>
+              </div>
+            </div>
+            <!-- <div class="col-sm-2"></div> -->
           </div>
         </div>
       </div>
@@ -601,7 +625,7 @@
       >
         Show More
       </button>
-    </div> -->
+    </div>
 
     <!-- Speakers -->
     <div id="guest_speakers" class="section">
