added speaker sessions in timeline

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                 </div>
                 <div class="event-content">
                   <p class="event-time date-event">
-                    <i class="fa fa-clock-o"></i> 12:30 PM - 01:30 PM
+                    <i class="fa fa-clock-o"></i> 12:00 PM - 01:00 PM
                   </p>
                   <h3 class="event-title">Event Inauguration</h3>
                 </div>
@@ -797,7 +797,7 @@
               <!-- /event -->
 
               <!-- event -->
-              <div class="event">
+              <!-- <div class="event">
                 <div class="event-hour"></div>
                 <div class="event-content">
                   <br /><br />
@@ -806,7 +806,7 @@
                   </p>
                   <h3 class="my-5 event-title">Speaker Sessions</h3>
                 </div>
-              </div>
+              </div> -->
               <!-- /event -->
 
               <!-- event -->
@@ -832,6 +832,58 @@
                   </div>
                 </div>
                 <!-- /event -->
+
+                <!-- event -->
+              <div class="event">
+                <div class="event-hour"></div>
+                <div class="event-content">
+                  <br /><br />
+                  <p class="event-time">
+                    <i class="fa fa-clock-o"></i> 01:30 PM - 02:30 PM
+                  </p>
+                  <h3 class="my-5 event-title">Speaker Session: Aman Sharma - Interactive session</h3>
+                </div>
+              </div>
+              <!-- /event -->
+
+              <!-- event -->
+              <div class="event">
+                <div class="event-hour"></div>
+                <div class="event-content">
+                  <br /><br />
+                  <p class="event-time">
+                    <i class="fa fa-clock-o"></i> 02:30 PM - 03:30 PM
+                  </p>
+                  <h3 class="my-5 event-title">Speaker Session: Atri Sharma - Interactive session</h3>
+                </div>
+              </div>
+              <!-- /event -->
+
+              <!-- event -->
+              <div class="event">
+                <div class="event-hour"></div>
+                <div class="event-content">
+                  <br /><br />
+                  <p class="event-time">
+                    <i class="fa fa-clock-o"></i> 03:30 PM - 04:30 PM
+                  </p>
+                  <h3 class="my-5 event-title">Speaker Session: Arvind PJ - Nixology</h3>
+                </div>
+              </div>
+              <!-- /event -->
+
+              <!-- event -->
+              <div class="event">
+                <div class="event-hour"></div>
+                <div class="event-content">
+                  <br /><br />
+                  <p class="event-time">
+                    <i class="fa fa-clock-o"></i> 04:30 PM - 05:30 PM
+                  </p>
+                  <h3 class="my-5 event-title">Speaker Session: Vaibhav Gupta - Perfection is Evil</h3>
+                </div>
+              </div>
+              <!-- /event -->
 
                 <!-- event -->
                 <div class="event">
@@ -869,6 +921,19 @@
                     </div>
                   </div>
                   <!-- /event -->
+
+                  <!-- event -->
+              <div class="event">
+                <div class="event-hour"></div>
+                <div class="event-content">
+                  <br /><br />
+                  <p class="event-time">
+                    <i class="fa fa-clock-o"></i> 06:00 PM - 07:00 PM
+                  </p>
+                  <h3 class="my-5 event-title">Speaker Session: Ujjwal Sharma - Interactive session</h3>
+                </div>
+              </div>
+              <!-- /event -->
 
                   <!-- event -->
                   <div class="event">
