--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 
                   <div class="event-content">
                     <p class="event-time date-event">
-                      <i class="fa fa-clock-o"></i> 12:00 AM
+                      <i class="fa fa-clock-o"></i> 12:00 PM
                     </p>
                     <h3 class="event-title">Registrations Close</h3>
                   </div>
