update speaker title

--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                   <p class="event-time">
                     <i class="fa fa-clock-o"></i> 01:30 PM - 02:30 PM
                   </p>
-                  <h3 class="my-5 event-title">Speaker Session: Aman Sharma - Interactive session</h3>
+                  <h3 class="my-5 event-title">Speaker Session: Aman Sharma - What is Site Reliability Engineering (SRE)</h3>
                 </div>
               </div>
               <!-- /event -->
