Adding secret easter egg

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 		style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;">
 	</div> -->
 
-    <a href="#top">
-      <div id="osdhack">
+    <a id="osdhack" href="javascript:void(0)">
+      <div >
         <img
           alt="logo"
           src="img/osdhack-sticker.png"
