updated session title

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
                   <p class="event-time">
                     <i class="fa fa-clock-o"></i> 06:00 PM - 07:00 PM
                   </p>
-                  <h3 class="my-5 event-title">Speaker Session: Ujjwal Sharma - Interactive session</h3>
+                  <h3 class="my-5 event-title">Speaker Session: Ujjwal Sharma - Multicore JS</h3>
                 </div>
               </div>
               <!-- /event -->
