--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/osdc/OSDHack/master/img/META%20IMAGE.png"
+      content="https://raw.githubusercontent.com/osdc/OSDHack/masterimg/META%20IMAGE.png"
     />
 
     <!-- Twitter -->
@@ -48,7 +48,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://raw.githubusercontent.com/osdc/OSDHack/master/img/META%20IMAGE.png"
+      content="https://raw.githubusercontent.com/osdc/OSDHack/masterimg/META%20IMAGE.png"
     />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="icon" type="image/png" href="img/osdhack-sticker.png" />
@@ -133,7 +133,7 @@
       <div >
         <img
           alt="logo"
-          src="img/osdhack-sticker.png"
+          src="img/osdhack-sticker1.png"
           class="logo-alt-img"
           style="width: 100%"
         />
@@ -346,25 +346,25 @@
 <div class="slideshow-container">
 
   <div class="mySlides fade">
-    <img src="/img/slider_1.jfif" style="width:100%">
+    <img src="img/slider_1.jfif" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="/img/slider_2.png" style="width:100%">
+    <img src="img/slider_2.png" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="/img/slider_3.png" style="width:100%">
+    <img src="img/slider_3.png" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="/img/slider_4.png" style="width:100%">
+    <img src="img/slider_4.png" style="width:100%">
   </div>
 
 
 
   <div class="mySlides fade">
-    <img src="/img/slider_6.png" style="width:100%">
+    <img src="img/slider_6.png" style="width:100%">
   </div>
 
 
@@ -441,7 +441,7 @@
           <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="/img/2.png">
+                    <img src="img/2.png">
                 </div>
     
                 <div class="contentBx">
@@ -457,7 +457,7 @@
         <div class="container">
           <div class="card">
               <div class="imgBx">
-                  <img src="/img/1.png">
+                  <img src="img/1.png">
               </div>
   
               <div class="contentBx">
@@ -806,7 +806,7 @@
                   style="margin: 2px"
                   target="_blank"
                   >
-                  <img src = "/img/profile-svg.svg" style="width: 23px; height: 23px;"/>
+                  <img src = "img/profile-svg.svg" style="width: 23px; height: 23px;"/>
                     <path
                       d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
                     /></svg></a>
