--- a/index.html
+++ b/index.html
@@ -346,25 +346,25 @@
 <div class="slideshow-container">
 
   <div class="mySlides fade">
-    <img src="img/slider_1.jfif" style="width:100%">
+    <img src="/img/slider_1.jfif" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="img/slider_2.png" style="width:100%">
+    <img src="/img/slider_2.png" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="img/slider_3.png" style="width:100%">
+    <img src="/img/slider_3.png" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="img/slider_4.png" style="width:100%">
+    <img src="/img/slider_4.png" style="width:100%">
   </div>
 
 
 
   <div class="mySlides fade">
-    <img src="img/slider_6.png" style="width:100%">
+    <img src="/img/slider_6.png" style="width:100%">
   </div>
 
 
