--- a/rules.html
+++ b/rules.html
@@ -44,7 +44,7 @@
     <div id="osdhack">
       <img
         alt="logo"
-        src="img/osdhack-sticker.png"
+        src="img/osdhack-sticker1.png"
         class="logo-alt-img"
         style="width: 100%"
       />
