--- a/index.html
+++ b/index.html
@@ -343,36 +343,51 @@
     <!-- /About -->
     <!-- Galery -->
     <!-- Slideshow container -->
-<div class="slideshow-container">
+    <div id="galery">
+      <!-- container -->
+      <div class="container">
+        <!-- row -->
+        <div class="row">
+          <!-- galery owl -->
+          <div id="galery-owl" class="owl-carousel owl-theme">
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/slider_1.jfif" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
 
-  <div class="mySlides fade">
-    <img src="/img/slider_1.jfif" style="width:100%">
-  </div>
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/slider_2.png" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
 
-  <div class="mySlides fade">
-    <img src="/img/slider_2.png" style="width:100%">
-  </div>
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/slider_3.png" alt="" height="10px" />
+            </div>
 
-  <div class="mySlides fade">
-    <img src="/img/slider_3.png" style="width:100%">
-  </div>
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/slider_4.png" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
 
-  <div class="mySlides fade">
-    <img src="/img/slider_4.png" style="width:100%">
-  </div>
-
-
-
-  <div class="mySlides fade">
-    <img src="/img/slider_6.png" style="width:100%">
-  </div>
-
-
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/slider_6.png" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+            
+            <!-- /galery item -->
+          </div>
+          <!-- /galery owl -->
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </div>
+    <!-- /Galery -->
 <br>
 
 <!-- The dots/circles -->
