--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <link rel="icon" type="image/png" href="img/osdhack-sticker.png" />
-  <title>OSDHack'22 | Rules and FAQs</title>
+  <title>OSDHack'23 | Rules and FAQs</title>
 
   <!-- Google font -->
   <link
@@ -44,7 +44,7 @@
     <div id="osdhack">
       <img
         alt="logo"
-        src="img/osdhack-sticker.png"
+        src="img/osdhack-sticker1.png"
         class="logo-alt-img"
         style="width: 100%"
       />
@@ -87,9 +87,9 @@
         <ul class="main-nav nav navbar-nav navbar-right">
           <li><a href="index.html#home">Home</a></li>
           <li><a href="index.html#about">About</a></li>
-          <li><a href="index.html#guest_speakers">Speakers</a></li>
-          <li><a href="index.html#schedule">Schedule</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <!-- <li><a href="index.html#guest_speakers">Speakers</a></li> -->
+          <!-- <li><a href="index.html#schedule">Schedule</a></li> -->
+          <!-- <li><a href="index.html#contact">Contact</a></li> -->
           <li class="active" id="rules_active">
             <a href="rules.html ">Rules</a>
           </li>
@@ -104,48 +104,12 @@
   <h1>Rules</h1>
   <hr class="style-two" />
   <ul class="rules" style="padding-bottom:1%">
-    <li>The Hackathon is open to all.</li>
-    <li>Allowed team size: 2-4 members.</li>
-    <li>
-      There is no restriction on the type of project you come up with, or the
-      languages/tools you use. It can be anything from a web app to a device
-      driver (as long as it is not a hardware project).
-    </li>
-    <li>
-      All code and assets must be created and committed within the time
-      constrictions of the Hackathon. Late commits may not be considered, so
-      avoid any last minute Red Bull rushes.
-    </li>
-    <li>
-      Reusing or incorporating existing open source code or copyright free
-      assets to create your magic (because that's what someone else's code
-      seems like) is allowed, provided that they are appropriately attributed
-      and their license agreements are followed.
-    </li>
-    <li>Your project or the same underlying idea behind the project has not been knowingly submitted by you in any other hackathon/event before.</li>
-
-    <li>
-      All code written must be compatible with an Open-Source license and should
-      be public.
-    </li>
-    <li>Git should be your primary version control system.</li>
-    <li>
-      The Organizing Team's decision on conflicts, results, prizes or any other
-      dispute would be made in all fairness and stands final.
-    </li>
+    <p>We are deliberating the rules of the hackathon to provide you all the best experience possible!</p>
+    
   </ul>
-  <ul class="rules" style="margin-bottom:2%;" id="oss-track">
-    <li type="none">
-      <h2 style="color:#c71239;">OSS Track</h2>
-    </li>
-    <li>Being really passionate about  Free/Open-Source Software, we have a separate track
-      aimed at improving the same. The OSS Track Prize will be awarded to the best project that fills
-      an existing gap in any Open-Source ecosystem. You will have to explain the gap and your solution 
-      in your demo. Feel free to ask away on Discord if you need any clarifications.
-    </li>
-  </ul>
+  
 
-  <div class="faq">
+  <div class="faq" style="padding: 65px 0;">
     <h1>FAQs</h1>
     <hr class="style-two" />
     <div class="global-label" style="margin-bottom:0;"></div>
