--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
     <!-- Primary Meta Tags -->
 
-    <meta name="title" content="OSDHack'23" />
+    <meta name="title" content="OSDHack'22" />
     <meta
       name="description"
-      content="OSDHack 2023 is an online hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea."
+      content="OSDHack 2022 is a nationwide open hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://osdhackjiit.com/">
-    <meta property="og:title" content="OSDHack'23" />
+    <meta property="og:title" content="OSDHack'22" />
     <meta
       property="og:description"
-      content="OSDHack 2023 is an online hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea."
+      content="OSDHack 2022 is a nationwide open hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea."
     />
     <meta
       property="og:image"
@@ -41,17 +41,17 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://osdhackjiit.com/">
-    <meta property="twitter:title" content="OSDHack'23" />
+    <meta property="twitter:title" content="OSDHack'22" />
     <meta
       property="twitter:description"
-      content="OSDHack 2023 is an online hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea."
+      content="OSDHack 2022 is a nationwide open hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea."
     />
     <meta
       property="twitter:image"
       content="https://raw.githubusercontent.com/osdc/OSDHack/masterimg/META%20IMAGE.png"
     />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="icon" type="image/png" href="img/osdhack-sticker1.png" />
+    <link rel="icon" type="image/png" href="img/osdhack-sticker.png" />
     <title>OSDHack'22</title>
 
     <!-- Google font -->
