fix: responsiveness, image optimization, title

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       content="https://raw.githubusercontent.com/osdc/OSDHack/masterimg/META%20IMAGE.png"
     />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="icon" type="image/png" href="img/osdhack-sticker.png" />
-    <title>OSDHack'22</title>
+    <link rel="icon" type="image/png" href="img/osdhack-sticker1.png" />
+    <title>OSDHack'23</title>
 
     <!-- Google font -->
     <link
@@ -205,7 +205,7 @@
         <div class="container">
           <!-- row -->
           <div class="row">
-            <!-- home content -->
+            <!-- home content --> 
             <div class="col-md-8 col-md-offset-2">
               <div class="home-content">
                 <div class="home-organizer" style="color: #c71239">
