--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                   <div>
                       <h3>Email</h3>
                       <ul>
-                          <li><a href="#">osdhackjiit@gmail.com</a></li>
+                          <li><a href="mailto:osdcjiit@gmail.com">osdcjiit@gmail.com</a></li>
                       </ul>
                   </div>
                   <div>
