--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <link rel="icon" type="image/png" href="img/osdhack-sticker.png" />
+  <link rel="icon" type="image/png" href="img/osdhack-sticker1.png" />
   <title>OSDHack'23 | Rules and FAQs</title>
 
   <!-- Google font -->
