--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           <div id="galery-owl" class="owl-carousel owl-theme">
             <!-- galery item -->
             <div class="galery-item">
-              <img src="img/slider_1.jfif" alt="" height="10px" />
+              <img src="img/slider_8.jpg" alt="" height="10px" />
             </div>
             <!-- /galery item -->
 
@@ -364,21 +364,23 @@
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="img/slider_3.png" alt="" height="10px" />
+              <img src="img/slider_6.png" alt="" height="10px" />
             </div>
 
             <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/slider_3.png" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/slider_1.jfif" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
             <div class="galery-item">
               <img src="img/slider_4.png" alt="" height="10px" />
             </div>
-            <!-- /galery item -->
-
-            <!-- galery item -->
-            <div class="galery-item">
-              <img src="img/slider_6.png" alt="" height="10px" />
-            </div>
-            <!-- /galery item -->
-            
             <!-- /galery item -->
           </div>
           <!-- /galery owl -->
