fix: content mistake

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                   <div>
                       <h3>Venue</h3>
                       <ul>
-                          <li><a href="#">Anywhere (As long as you have interent access)</a></li>
+                          <li><a href="#">Anywhere (As long as you have internet access)</a></li>
                       </ul>
                   </div>
                   <div>
